fixing the logo spacing

--- a/css/screen.css
+++ b/css/screen.css
@@ -221,10 +221,10 @@ body {
   padding: 1rem;
 }
 
-
 h1 {
   font-size: 2rem;
   letter-spacing: 1px;
+  margin-top: 0; 
   margin-bottom: 1rem;
 }
 
@@ -257,32 +257,30 @@ form {
     width: 200px; 
 }
 
-
-
-
-#logo img {
-	justify-content: center;
+main {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-    max-width: 100%; 
-    height: auto; 
-    width: 200px; 
-	
-    display: flex;
- 
-    gap: 10px; 
+  text-align: center;
 }
 
+#logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px; 
+}
 
-
+#logo img {
+  width: 200px; 
+  height: auto;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-
-
 
 label {
   display: block;
@@ -301,8 +299,6 @@ input[type="email"], input[type="text"], input[type="tel"], input[type="date"], 
   width: 100%;
 }
 
-
-
 input[type="submit"] {
   background-color: #8b2b22;
   color: #fff;
@@ -319,9 +315,6 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #4240ca;
 }
-
-
-
 
 @media (max-width: 600px) {
   form {
